refactor: rebuild backend on optimized mysql schema